# firmware_codebase

./: .gitmodules  README.md
HAL/mcu/32-Bit/Nios-II/alinx_minimal_sys/: CMakeLists.txt  alinx_minimal_sys.cmake  application_linker.x  boot_image.S  bsp_io.cpp  bsp_led.cpp  bsp_objects.hpp  bsp_spi.cpp  bsp_sys.cpp  bsp_uart.cpp  toolchain.cmake
HAL/mcu/32-Bit/Nios-II/alinx_minimal_sys/Blinky_Demo/: Blinky.cpp  CMakeLists.txt
HAL/mcu/32-Bit/Nios-II/alinx_minimal_sys/BootROM-App/: BootROM.cpp  CMakeLists.txt  log.txt
HAL/mcu/32-Bit/Nios-II/alinx_minimal_sys/bsp_hal/: Makefile  alt_sys_init.c  linker.h  linker.x  mem_init.mk  memory.gdb  public.mk  settings.bsp  summary.html  system.h
HAL/mcu/32-Bit/Nios-V/alinx_minimal_sys/: CMakeLists.txt  alinx_minimal_sys.cmake  bsp_io.cpp  bsp_led.cpp  bsp_objects.hpp  bsp_sys.cpp  bsp_uart.cpp  toolchain.cmake
HAL/mcu/32-Bit/Nios-V/alinx_minimal_sys/BootROM-App/: BootROM.cpp  CMakeLists.txt
HAL/mcu/32-Bit/Nios-V/alinx_minimal_sys/bsp_hal/: CMakeLists.txt  Makefile  alt_sys_init.c  cmake_install.cmake  linker.h  linker.x  memory.gdb  settings.bsp  summary.html  system.h  toolchain.cmake
HAL/mcu/32-Bit/amd/alinx_zynq7020/: CMakeLists.txt  alinx_zynq7020.cmake  alinx_zynq7020_minimal_system.xsa  bsp_io.cpp  bsp_led.cpp  bsp_objects.hpp  bsp_spi.cpp  bsp_sys.cpp  create_fsbl.tcl  lscript_ddr.ld  standalone_bsp_creation.tcl  toolchain.cmake  xilinx_standalone_build_steps.txt
HAL/mcu/32-Bit/amd/alinx_zynq7020/Blinky_Demo/: Blinky_Demo.cpp  CMakeLists.txt  README.txt
HAL/mcu/32-Bit/amd/hamgeek_zynq7010/: CMakeLists.txt  bsp_io.cpp  bsp_led.cpp  bsp_objects.hpp  bsp_spi.cpp  bsp_sys.cpp  bsp_uart.cpp  hamgeek_zynq7010.cmake  hamgeek_zynq7010.xsa  hamgeek_zynq7010_sdr.xsa  lscript_ocram.ld  standalone_bsp_creation.tcl
HAL/mcu/32-Bit/amd/hamgeek_zynq7010/Blinky_Demo/: Blinky_Demo.c  Blinky_Demo.cpp  CMakeLists.txt
HAL/mcu/32-Bit/amd/hamgeek_zynq7010/sdr/: CMakeLists.txt  README.txt  app_config.h  parameters.h  sdr_main.cpp
HAL/mcu/32-Bit/ti/launchxl-f28p55x/: CMakeLists.txt  bsp_io.cpp  bsp_led.cpp  bsp_objects.hpp  bsp_spi.cpp  bsp_sys.cpp  bsp_uart.cpp  flash_program.sh  launchxl-f28p55x.cmake  primitive_types_definition.h  toolchain.cmake
HAL/mcu/32-Bit/ti/launchxl-f28p55x/Blinky_Demo/: Blinky.cpp  CMakeLists.txt  README.txt
HAL/mcu/bsp/v1/: bsp_adc.hpp  bsp_button.hpp  bsp_exti.hpp  bsp_fet.hpp  bsp_gint.hpp  bsp_i2c.hpp  bsp_io.hpp  bsp_led.hpp  bsp_lptim.hpp  bsp_rtc.hpp  bsp_spi.hpp  bsp_sys.hpp  bsp_timer.hpp  bsp_uart.hpp
HAL/memory/m25p64/: CMakeLists.txt  m25p64.cpp  m25p64.hpp
RTOS/RTOS_OSAL/: mutex.hpp  queue.hpp  rtos_al.hpp  rtos_err.hpp  semaphore.hpp  thread.hpp  timer.hpp
RTOS/RTOS_OSAL/Baremetal_implementation/: CMakeLists.txt  mutex.cpp  queue.cpp  rtos_al.cpp  rtos_imp.hpp  semaphore.cpp  thread.cpp  timer.cpp
RTOS/RTOS_OSAL/FreeRTOS_implementation/: CMakeLists.txt  mutex.cpp  queue.cpp  rtos_al.cpp  rtos_err_map.cpp  rtos_err_map.hpp  rtos_imp.hpp  semaphore.cpp  thread.cpp  timer.cpp
common/: assertion.hpp  error_code.hpp  general_includes.hpp  noncopyable.hpp
utility/dbg_log/: CMakeLists.txt  diagnostic_log.cpp  diagnostic_log.hpp
utility/misc_operations/: misc_operations.cpp
